packages/kit/test/apps/basics/src/routes/errors/error-html/make-root-fail/+server.js
import { set_should_fail } from '../../../+layout.server';

export function GET() {
	set_should_fail(true);
	return new Response();
}
